--- a/InventorySystem.Models/InventorySystem.Models.csproj
+++ b/InventorySystem.Models/InventorySystem.Models.csproj
@@ -3,8 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.1.3" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\InventorySystem.Utils\InventorySystem.Utils.csproj" />
