--- a/InventorySystem.Models/InventorySystem.Models.csproj
+++ b/InventorySystem.Models/InventorySystem.Models.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.5" />
   </ItemGroup>
 
   <ItemGroup>
